src/components/pages/About/about.css
.hi{
    height:90vh;
    background-image: linear-gradient(
        to bottom,
        #acacaccc,
        #636363d0 ),
    url("../../../creed.jpg");
    
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;
    
   
  
   
    padding-top: 50px;
   
 
}

.hiTwo{
   
    height:100vh;
    background-color: antiquewhite;
}

.languages{
    margin-top: 15%;
   


}

.parent {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}
  
.child {
    display: inline-block;
    
    margin: 10px 2% 0 2%;
    flex-grow: 1;
    height: 100px;
    width: auto;
    max-width: 100px;
}

#about{
    color: aliceblue;
    
}

#abouth1{
    color: rgb(0, 106, 138);
    
}
#abouth12{
    color: rgba(16, 199, 255, 0.919);
 
    
}

@media (max-width: 600px) {
   
    
    #abouth1{
        color: rgb(0, 106, 138);
        font-size: 30px;
        padding-bottom: 30px;
        
    }

    #abouth12{
        color: rgba(16, 199, 255, 0.919);
        font-size: 27px;
        
    }

    #about{
    
        font-size:15px;
        line-height: 20px;
    }
    .hi{
        padding-top: 30px;
        height: 95vh;
    }

    .hi p {
        padding-left:20px ;
        padding-right:20px ;
        padding-bottom:20px ;
    }

    .child {
        display: inline-block;
        
        margin: 0px 3% 4% 3%;
        flex-grow: 0;
        height: 45px;
        width: auto;
        max-width: 100px;
    }
    
    

}

